--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -161,7 +161,7 @@
               - if I18n.locale != :en
                 = link_to "English",locale: :en
               - if I18n.locale != :ar
-                = link_to "Arabic", locale: :ar
+                = link_to "عربى", locale: :ar
         .row.clearfix
           .col-md-12.column
             %nav.navbar.navbar-default.navbar-inverse{:role => "navigation"}
