--- a/app/views/collections/_collectionbooks.html.haml
+++ b/app/views/collections/_collectionbooks.html.haml
@@ -4,11 +4,12 @@
     return r;
   }
 - if (@collection_volumes != '' && @total_number > 0)
+  - @number = 0
   - @collection_volumes.each do |ubh_vol|
     - @ubh_vol = ubh_vol
     - @vol = Volume.find_by_id(@ubh_vol.volume)
-    - @book = solr_search("vol_jobid:#{@vol.job_id}","bok_title, views, rate")
-    - @thumb = "volumes/#{@vol.job_id}/thumb.jpg"
+    - @book = solr_search("vol_jobid:#{@vol.job_id}","bok_title, views, author, rate")
+    - @number = @number + 1
     :javascript
       $(document).ready(function(){
         $("#starsidelink_#{@vol.job_id}").jRating({
@@ -16,67 +17,72 @@
           bigStarsPath: "/images_#{I18n.locale}/#{I18n.t(:stars_grey)}"
         });
       });
-    .row.clearfix  
-      .col-md-2.column
-        = link_to image_tag("/#{@thumb}") , {:controller => :books, :action => :show, :id => @vol.job_id}  
-      .col-md-6.column
-        %h4
-          = @book[:bok_title][0]
-        .date.text-muted
-          %small
-            %b
-              =I18n.t(:col_book_added_on)
-            = @ubh_vol.created_at
-        .date.text-muted
-          %small
-            %b
-              = I18n.t(:col_book_order)
-            = @ubh_vol.position  
-      .col-md-4.column.controls
-        %ul.fa-ul.tools
-          - if (@ubh_vol.collection.user_id == session[:user_id])
-            %li
-              - if @ubh_vol.position > 1
-                %i.fa.fa-li.fa-arrow-up
-                %small
-                  = link_to "#{I18n.t(:col_book_move_up)} ", 
-                  {:controller => :collections, :action => :move_up, :volume_collection_id => @ubh_vol.id}  
-              - if @ubh_vol.position < @total_number
-                - if @ubh_vol.position == 1
-                  %i.fa.fa-li.fa-arrow-down 
+    .browse
+      .row.clearfix  
+        .col-md-2.column
+          - @coverno = @number
+          - @covertitle = @book[:bok_title][0]
+          - if(@book['author'] != nil)
+            - @coverauthor = @book['author'][0]
+          - else
+            - @coverauthor = ""    
+          = render :partial => "books/covers"   
+        .col-md-6.column
+          %h4
+            = @book[:bok_title][0]
+          .date.text-muted
+            %small
+              %b
+                =I18n.t(:col_book_added_on)
+              = @ubh_vol.created_at
+          .date.text-muted
+            %small
+              %b
+                = I18n.t(:col_book_order)
+              = @ubh_vol.position  
+        .col-md-4.column.controls
+          %ul.fa-ul.tools
+            - if (@ubh_vol.collection.user_id == session[:user_id])
+              %li
+                - if @ubh_vol.position > 1
+                  %i.fa.fa-li.fa-arrow-up
                   %small
-                    = link_to "#{I18n.t(:col_book_move_down)}", 
+                    = link_to "#{I18n.t(:col_book_move_up)} ", 
+                    {:controller => :collections, :action => :move_up, :volume_collection_id => @ubh_vol.id}  
+                - if @ubh_vol.position < @total_number
+                  - if @ubh_vol.position == 1
+                    %i.fa.fa-li.fa-arrow-down 
+                    %small
+                      = link_to "#{I18n.t(:col_book_move_down)}", 
+                        {:controller => :collections, :action => :move_down, :volume_collection_id => @ubh_vol.id}
+                  - else
+                    %i.fa.fa-arrow-down 
+                    %small
+                    = link_to " #{I18n.t(:col_book_move_down)}", 
                       {:controller => :collections, :action => :move_down, :volume_collection_id => @ubh_vol.id}
-                - else
-                  %i.fa.fa-arrow-down 
-                  %small
-                  = link_to " #{I18n.t(:col_book_move_down)}", 
-                    {:controller => :collections, :action => :move_down, :volume_collection_id => @ubh_vol.id}
+              %li
+                %i.fa.fa-li.fa-trash-o
+                %small
+                  = link_to "#{I18n.t(:col_book_trash)}" , 
+                  {:controller => :collections, :action => :delete_book, :volume_collection_id => @ubh_vol.id}, 
+                  :onclick => "return confirmBookDeleteFromCollection()" 
             %li
-              %i.fa.fa-li.fa-trash-o
+              %i.fa.fa-li.fa-book
               %small
-                = link_to "#{I18n.t(:col_book_trash)}" , 
-                {:controller => :collections, :action => :delete_book, :volume_collection_id => @ubh_vol.id}, 
-                :onclick => "return confirmBookDeleteFromCollection()" 
-          %li
-            %i.fa.fa-li.fa-book
-            %small
-              = link_to "#{I18n.t(:book_details_read)}" ,
-                {:controller => :books, :action => :show, :id => @vol.job_id, :tab => "read"}
-          %li
-            %i.fa.fa-li.fa-info
-            %small
-              = link_to "#{I18n.t(:book_details_details)}" , 
-                {:controller => :books, :action => :show, :id => @vol.job_id}    
-        .rate
-          %span.text-muted.pull-right
-            %small
-              = "#{I18n.t(:sidelinks_views, :count => @book[:views])} "
-        - if @book['rate'] != 0.0
-          .starsidelink{:id => "starsidelink_#{@vol.job_id}", :data => "#{@book['rate']}"}
-        
+                = link_to "#{I18n.t(:book_details_read)}" ,
+                  {:controller => :books, :action => :show, :id => @vol.job_id, :tab => "read"}
+            %li
+              %i.fa.fa-li.fa-info
+              %small
+                = link_to "#{I18n.t(:book_details_details)}" , 
+                  {:controller => :books, :action => :show, :id => @vol.job_id}    
+          .rate
+            %span.text-muted.pull-right
+              %small
+                = "#{I18n.t(:sidelinks_views, :count => @book[:views])} "
+          - if @book['rate'] != 0.0
+            .starsidelink{:id => "starsidelink_#{@vol.job_id}", :data => "#{@book['rate']}"}      
     .clearfix
-      %hr
 - else
   %h4
     = I18n.t(:no_books_found)
