--- a/app/views/users/_history.html.haml
+++ b/app/views/users/_history.html.haml
@@ -5,7 +5,9 @@
       %span.badge
         = @total_number
     %hr
-    -@history.each do |item|
+    - @number = 0
+    - @history.each do |item|
+      - @number = @number + 1
       - @vol = Volume.find_by_id(item.volume)
       :javascript
         $(document).ready(function(){
@@ -14,14 +16,16 @@
             bigStarsPath: "/images_#{I18n.locale}/#{I18n.t(:stars_grey)}"
           });
         });
-      - @book = solr_search("vol_jobid:#{@vol.job_id}","bok_title, views, rate")
-      - if(@vol[:get_thumbnail_fail] == 0)
-        - @thumb = "volumes/#{@vol[:job_id]}/thumb.jpg"
-      - else
-        - @thumb = "images_#{I18n.locale}/#{I18n.t(:default_book_small)}"
+      - @book = solr_search("vol_jobid:#{@vol.job_id}","bok_title, views, rate, author")
       .row
         .col-md-2
-          = link_to image_tag("/#{@thumb}") , {:controller => :books, :action => :show, :id => @vol.job_id, :tab => nil}
+          - @coverno = @number
+          - @covertitle = @book[:bok_title][0]
+          - if(@book['author'] != nil)
+            - @coverauthor = @book['author'][0]
+          - else
+            - @coverauthor = ""    
+          = render :partial => "books/covers" 
         .col-md-7
           %h4
             = link_to "#{@book[:bok_title][0]}", {:controller => :books, :action => :show, :id => @vol.job_id, :tab => nil}
