--- a/app/views/books/_breadcrumb.html.haml
+++ b/app/views/books/_breadcrumb.html.haml
@@ -1,4 +1,4 @@
-:javascript
+:javascript  
   function go_to(sort_type){
     searchquery = window.location.href.split('?')[1]
     if(searchquery == null || searchquery == ''){
@@ -39,9 +39,11 @@
             = link_to :params => removeBreadCrumb(@url_params, key, term) do
               ="&times;".html_safe
 
+- query = parse_url_params(@url_params)
 - if (@query_array.any? and !(session[:user_id].nil?) and !(@query == "*:*"))
   .savequery.pull-right
-    = link_to I18n.t(:save_query) , {:controller => :user_search_history, :action => :save_query, :query => parse_url_params(@url_params), :user_id => session[:user_id]}, :class => "btn btn-success btn-sm"
+    - if(!is_already_saved?(session[:user_id], query))
+      = link_to I18n.t(:save_query) , {:controller => :user_search_history, :action => :save_query, :query => query, :user_id => session[:user_id]}, :class => "btn btn-success btn-sm", :id => "save_query"
     = link_to I18n.t(:clear) , {:controller => :books, :action => :index}, :class => "btn btn-warning btn-sm" 
 
 .clearfix
