--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -6,36 +6,37 @@
 = stylesheet_link_tag 'jquery/rating/jRating.jquery.css'
 = javascript_include_tag 'jquery/rating/jRating.jquery.js'
 
-.row.clearfix  
-  .col-md-8
-    =render :partial => "books/breadcrumb"
+.row
   .col-md-4.sidebar-offcanvas.pull-right
     =render :partial => "books/right_column"
-  - if (@response != '' && @response['response']['numFound'] > 0)
-    - @number = 0
-    - @response['response']['docs'].each do |doc|
-      - @number = @number + 1
-      - @id = doc['vol_jobid']
-      - @vol = Volume.find_by_job_id(doc['vol_jobid'])
-      - if (@vol != nil)
-        - @highlight = @response['highlighting'][@id.to_s]
-        - @title = (@highlight != nil && @highlight['bok_title'] != nil) ? @highlight['bok_title'][0] : doc['bok_title'][0]
-        - thumb = ''
-        - if(@vol[:get_thumbnail_fail] == 0)
-          - @thumb = "volumes/#{@vol[:job_id]}/thumb.jpg"
-        - else
-          - @thumb = "images_#{I18n.locale}/#{I18n.t(:default_book)}"
-        - @doc = doc
-        =render :partial => "books/listresult"
-    - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
-      .col-md-8
-        .pagination-centered
-          - @pages = adjustPaging(@page, @lastPage)
-          = render :partial => "books/paging"
-  - else
-    .well-sm.center-block
-      %h2
-        =I18n.t(:no_books_found)
+  .col-md-8
+    =render :partial => "books/breadcrumb"
+  
+    - if (@response != '' && @response['response']['numFound'] > 0)
+      - @number = 0
+      - @response['response']['docs'].each do |doc|
+        - @number = @number + 1
+        - @id = doc['vol_jobid']
+        - @vol = Volume.find_by_job_id(doc['vol_jobid'])
+        - if (@vol != nil)
+          - @highlight = @response['highlighting'][@id.to_s]
+          - @title = (@highlight != nil && @highlight['bok_title'] != nil) ? @highlight['bok_title'][0] : doc['bok_title'][0]
+          - thumb = ''
+          - if(@vol[:get_thumbnail_fail] == 0)
+            - @thumb = "volumes/#{@vol[:job_id]}/thumb.jpg"
+          - else
+            - @thumb = "images_#{I18n.locale}/#{I18n.t(:default_book)}"
+          - @doc = doc
+          =render :partial => "books/listresult"
+      - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
+        .col-md-8
+          .pagination-centered
+            - @pages = adjustPaging(@page, @lastPage)
+            = render :partial => "books/paging"
+    - else
+      .well-sm.center-block
+        %h2
+          =I18n.t(:no_books_found)
         
 :javascript
   $(function(){
