--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -20,11 +20,17 @@
   });
   
   function search_collection(){
-    if ($("#search_coll_field").val() == ''){
+    field = $("#search_coll_field").val();
+    if (field == ''){
+      alert("#{I18n.t(:empty_search_query_warn)}");
+      return;
+    }
+    if ([' ',  '!', '@', '#', '$' , '^', '&', '*', '(',  ',',  ')', '_',  '+', '-', '=' , '&'].indexOf(field) >= 0 || field.indexOf("%") >= 0) {
+      alert("#{I18n.t(:invalid_input)}");
       return;
     }
     else{
-      window.location=window.location.href.split('?')[0] + "?search=" + $("#search_coll_field").val();
+      window.location=window.location.href.split('?')[0] + "?search=" + field;
     }
   }
 .row.clearfix
