--- a/app/views/books/_booknames.html.haml
+++ b/app/views/books/_booknames.html.haml
@@ -6,15 +6,25 @@
 %i
   %b
     =I18n.t(:listresult_names)
-- count = 0
-- @names.each do |curname|
-  - name = Name.find_by_string(curname.gsub(HLPRE, '').gsub(HLPOST, ''))
+- @names.each do |name|
+  - if name.kind_of?(Array)
+    - @names.delete(name)
+    - @names << name[0]
+- names_from_db = Name.find_by_sql("select * from names where string in  (#{@names.map{|l| "'" + l + "'"}.join(", ")})")
+- @names.each_with_index do |curname, index|
+  - #sometimes names are saved in array or arrays in case their is only one name in array
+  -#- if curname.kind_of?(Array)
+    - onename = curname[0]
+  -#- else
+    - onename = curname
+  /- onename = curname	
+  /- name = Name.find_by_string(curname.gsub(HLPRE, '').gsub(HLPOST, '')))
+  - name = names_from_db.find{ |item| item.string == curname.gsub(HLPRE, '').gsub(HLPOST, '') }  
   -if (name != nil)
-    -#NEW_LAYUOT change name from tooltip to tooltipname to avoid conflict with tooltip class in bootstrap file
     %a.tooltipname{:title =>name_tip(@id, name.id, name.string, name.eol_thumb, name.eol_page_id), :href => "#"}
-      = item_count_format_highlight('name', name.string, curname)
-    - count = count + 1
-    -if count != @names.length
+      = curname.html_safe
+      /= item_count_format_highlight('name', name.string, onename)    
+    -if index != @names.length - 1
       %b
         =I18n.t(:separator)
 %span
