--- a/app/views/browse/show.html.haml
+++ b/app/views/browse/show.html.haml
@@ -4,15 +4,19 @@
       = @page_title
     %hr
     .well.text-center
-      = render :partial => "browse/chars"
+      = render :partial => "browse/chars"        
     .panel.panel-default
-      - get_prefixes_of_results(@browse_list).each do |prefix|    
-        .panel-heading
-          %h3.panel-title
-            =prefix.upcase
-        .panel-body
-          %ul    
-          - filter_list_by_prefix(@browse_list, prefix).each do |item|    
-            %li
-              =link_to books_path(:params => addFacetSearch({}, @search_prefix, item[:name].html_safe.gsub("]", "").gsub("[", ""))) do
-                = "#{item[:name].capitalize} (#{item[:count]})"
+      - res =  get_prefixes_of_results(@browse_list)
+      - if res.empty?
+        = I18n.t(:no_entity_found, :entity => @page_title)
+      - else                        
+        - res.each do |prefix|    
+          .panel-heading
+            %h3.panel-title
+              =prefix.upcase
+          .panel-body       
+            %ul    
+              - filter_list_by_prefix(@browse_list, prefix).each do |item|    
+                %li
+                  =link_to books_path(:params => addFacetSearch({}, @search_prefix, item[:name].html_safe.gsub("]", "").gsub("[", ""))) do
+                    = "#{item[:name].capitalize} (#{item[:count]})"
