--- a/app/assets/stylesheets/main_ar.sass
+++ b/app/assets/stylesheets/main_ar.sass
@@ -1,5 +1,5 @@
 body
-  background-color: #fbfbfb
+  background-color: #FFF
   border-top: 8px solid #6d4479
   color: #7c7c7c
 
@@ -124,7 +124,7 @@ h1, h2, h3, h4
     border-top: 1px dotted #dddddd
   h4 a
     color: #6d4479
-  min-height: 165px
+  min-height: 200px
   border-bottom: 1px dotted #dddddd
   padding: 10px 0px
 h3 a
@@ -613,3 +613,21 @@ fieldset
 .usercollectionrate
   width: 115px
 /* END OF USER RATING*/
+.bk-list
+  list-style: none
+  position: relative
+  li
+    position: relative
+    width: 110px
+    float: right
+    z-index: 1
+    margin: 0px 50px 10px 0
+    -webkit-perspective: 1800px
+    -moz-perspective: 1800px
+    perspective: 1800px
+    &:last-child
+      margin-right: 0
+    min-height: 140px
+
+.no-padding 
+  padding: 0
