Facebook&Twitter sharing home page not current page

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,21 +1,22 @@
 :javascript
   function shareFb(){
+    bhl = "#{BHL_LINK}";
     var sharer = "https://www.facebook.com/sharer/sharer.php?u="; 
-    window.open(sharer + location.href, 'sharer', 'width=626,height=436'); 
-  }
+    window.open(sharer + bhl, 'sharer', 'width=626,height=436'); 
+  }  
   function twitter(d,s,id){
     var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
     if(!d.getElementById(id)){
       js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';
       fjs.parentNode.insertBefore(js,fjs);
-    }
+    }    
   }(document, 'script', 'twitter-wjs')
 .footer
   .container
     .col-md-3.social
       %a{:href => "", :onclick => "shareFb()"}
         %i.fa.fa-facebook.fa-2x
-      %a{:href => "https://twitter.com/share", :target => "_blank"}
+      %a{:href => "https://twitter.com/share?original_referer=#{BHL_LINK}&url=#{BHL_LINK}", :target => "_blank"}
         %i.fa.fa-twitter.fa-2x
     .col-md-9.pull-right
       %p.text-right
