--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -82,9 +82,7 @@
 .row.clearfix
   .col-md-8.column.browse
     =render :partial => "collections/collectionbooks"
-    - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
-      - @pages = adjustPaging(@page, @lastPage)
-      = render :partial => "books/paging"
+    = will_paginate @collection_volumes, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
   .col-xs-6.col-sm-4.sidebar-offcanvas
     .spacing-left.panel.panel-styled
       =render :partial => "collections/collectionreviews"
