--- a/app/views/users/_activity.html.haml
+++ b/app/views/users/_activity.html.haml
@@ -29,11 +29,9 @@
               %small.text-muted
                 = "#{I18n.t(:log_activity_at)} #{item[:time]}"
         %hr
-    - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
-      .col-md-8
-        .pagination-centered
-          - @pages = adjustPaging(@page, @lastPage)
-          = render :partial => "books/paging"
+    .col-md-8
+      .pagination-centered
+        = will_paginate @log_records, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
 - else
   %h4
     = I18n.t(:profile_no_activities_found)           
