--- a/app/views/users/_annotations.html.haml
+++ b/app/views/users/_annotations.html.haml
@@ -67,6 +67,10 @@
                   %p.small
                     = highlight.text
                   %hr
+    .col-md-8
+      .pagination-centered
+        = will_paginate @annotation, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
+          
 - else
   %h4
     = I18n.t(:profile_no_annotations_found)
