--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -47,11 +47,9 @@
             .starsidelink{:id => "starsidelink_#{item.id}", :data => "#{item.rate}"}    
         .clearfix
         %hr
-    - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
-      .col-md-8
-        .pagination-centered
-          - @pages = adjustPaging(@page, @lastPage)
-          = render :partial => "books/paging"
+    .col-md-8
+      .pagination-centered
+        = will_paginate @collections, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
 - else
   %h4
     = I18n.t(:profile_no_collections_found)     
