--- a/app/views/users/_queries.html.haml
+++ b/app/views/users/_queries.html.haml
@@ -17,11 +17,9 @@
             %a{:href => "/user_search_history/delete_query/#{query.id}", :onclick => "return confirmDelete(\"#{I18n.t(:delete_saved_query_confirm)}\");"}
               %i.fa.fa-times-circle
               = I18n.t(:delete)    
-    - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
-      .col-md-8
-        .pagination-centered
-          - @pages = adjustPaging(@page, @lastPage)
-          = render :partial => "books/paging"
+    .col-md-8
+      .pagination-centered
+        = will_paginate @queries, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
 - else
   %h4
     = I18n.t(:profile_no_queries_found)          
