update arabic translations

--- a/app/views/collections/edit.html.haml
+++ b/app/views/collections/edit.html.haml
@@ -61,7 +61,7 @@
           .form-group
             .col-sm-2
             .col-sm-10
-              = f.submit I18n.t('submit_buton'), :class => "btn btn-default", :id => "submit"
+              = f.submit I18n.t('edit_collection'), :class => "btn btn-default", :id => "submit"
               = f.submit I18n.t('clear_button'), :class => "btn btn-default", :type => "reset"
 
      
