--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -31,5 +31,5 @@
                 .clearfix
                 %br
                   %center
-                    = f.submit I18n.t('submit_buton'), :class => "btn btn-primary"
+                    = f.submit I18n.t('send'), :class => "btn btn-primary"
                     = f.submit I18n.t('clear_button'), :type => "reset", :class => "btn btn-defualt"
