--- a/app/views/users/forgot_password.html.haml
+++ b/app/views/users/forgot_password.html.haml
@@ -16,5 +16,5 @@
           .form-group
             .col-sm-2
             .col-sm-10
-              = f.submit I18n.t('submit_buton'), :class => "btn btn-primary"
+              = f.submit I18n.t('send'), :class => "btn btn-primary"
               = f.submit I18n.t('clear_button'), :type => "reset", :class => "btn btn-default"
