--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -50,7 +50,7 @@
           .form-group
             .col-sm-2
             .col-sm-10
-              = f.submit I18n.t('submit_buton'), :class => "btn btn-default", :id => "submit"
+              = f.submit I18n.t('header_login'), :class => "btn btn-default", :id => "submit"
         %hr
           %div
             = link_to I18n.t(:forgot_password_link), users_forgot_password_path
