--- a/app/views/users/reset_password.html.haml
+++ b/app/views/users/reset_password.html.haml
@@ -13,5 +13,5 @@
       %li
         = f.password_field :entered_password_confirmation, { :maxlength => 32 }
     %fieldset
-      = f.submit I18n.t('submit_buton'), :class => "btn"
+      = f.submit I18n.t('reset'), :class => "btn"
       = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
