update pagination design

--- a/app/assets/stylesheets/main_en.sass
+++ b/app/assets/stylesheets/main_en.sass
@@ -101,7 +101,34 @@ h1, h2, h3, h4
 
 .pagination a
   color: #6d4479
+  padding: 5px 10px
+  border: 1px solid #f2f2f2
+  border-radius: 4px
+  
+.pagination 
+  a:hover 
+    background-color: #6d4479
+    color: #fff
+.pagination
+  .current 
+    padding: 5px 10px
+    background: #6d4479
+    color: #fff
+    border: 1px solid #6d4479
+    border-radius: 4px
 
+.previous_page 
+  color: #999
+  border: 1px solid #f2f2f2
+  padding: 5px 10px
+  border-radius: 4px
+  
+.next_page 
+  color: #999
+  border: 1px solid #f2f2f2
+  padding: 5px 10px
+  border-radius: 4px  
+   
 .tools
   color: #9a71a6
   a:hover
