--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -34,6 +34,6 @@
           - count += 1
           - if count < @activities.count
             %hr
-      .col-md-8
+      %div
         .pagination-centered
           = will_paginate @activities, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
