--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -50,6 +50,6 @@
   .row
     =render :partial=> "collections/listresult"
     
-  .col-md-8
+  %div
     .pagination-centered
       = will_paginate @collections, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
