--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -47,7 +47,7 @@
             .starsidelink{:id => "starsidelink_#{item.id}", :data => "#{item.rate}"}    
         .clearfix
         %hr
-    .col-md-8
+    %div
       .pagination-centered
         = will_paginate @collections, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
 - else
