--- a/app/views/users/_history.html.haml
+++ b/app/views/users/_history.html.haml
@@ -65,7 +65,7 @@
               
         .clearfix
       %hr
-    .col-md-8
+    %div
       .pagination-centered
         = will_paginate @history, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
 - else
