--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -118,7 +118,7 @@
               - if (@action == "signup")
                 = f.submit I18n.t('header_signup'), :class => "btn btn-primary", :id => "submit"
               - else
-                = f.submit I18n.t('header_login'), :class => "btn btn-primary", :id => "submit"
+                = f.submit I18n.t('submit_buton'), :class => "btn btn-primary", :id => "submit"
               - if (@action == "modify")
                 = f.submit I18n.t('reset_button'), :class => "btn btn-default",:id => "clear", :type => "reset"
               - else
