fix sign up email message

--- a/app/views/notifier/user_verification.html.erb
+++ b/app/views/notifier/user_verification.html.erb
@@ -5,7 +5,8 @@
   </head>
   <body>
     <h5><%= I18n.t(:dear_msg, :name=> @user.username) %></h5>
-    <p><%= I18n.t('notifier.user_verification.message', :verification_url => @verification_url) %></p>
+    <p><%= I18n.t('notifier.user_verification.message_1') %></p>
+    <p><%= I18n.t('notifier.user_verification.message_2') %></p>
     <p><%= link_to "#{@verification_url}", @verification_url  %></p>
     <br/>
     <p> <%= I18n.t(:email_signature_1) %></p>
